add normal python version & add import docs

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -8,7 +8,12 @@
    },
    "source": [
     "## Import Libraries\n",
-    "Import the required deps"
+    "Before running any code some libary imports are required.\n",
+    "\n",
+    "- urlib.request is being used to download the data set\n",
+    "- matplotlib is imported to allow for plotting the data onto a graph\n",
+    "- pandas is being imported to allow for datasets to be imported and manipulated in-memory\n",
+    "- sklean is used to perform kmeans clustering"
    ]
   },
   {
@@ -282,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_cluster(data, x, y, c, xl, yl, title):\n",
+    "def plot_cluster(data, kmeans, x, y, c, xl, yl, title):\n",
     "    plt.scatter(x=x, y=y, c=c, data=data)\n",
     "    plt.scatter(\n",
     "        kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 1],\n",
@@ -305,7 +310,7 @@
     "for i, k_col in enumerate(cluster_columns, 1):\n",
     "    plt.subplot(1, 2, i)\n",
     "    x, y = column_names\n",
-    "    plot_cluster(df, x, y, k_col, \"Sepal Length\", \"Petal Length\", k_col)\n",
+    "    plot_cluster(df, kmeans, x, y, k_col, \"Sepal Length\", \"Petal Length\", k_col)\n",
     "plt.show()"
    ]
   },
