add cluster description

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -118,7 +118,8 @@
    "id": "046e3529-2cea-4855-a1ec-af8e4e86876c",
    "metadata": {},
    "source": [
-    "## Show Loaded Data"
+    "## Show Loaded Data\n",
+    "Once the data is loaded we can preview the dataset which currently shows all the columns from the csv file."
    ]
   },
   {
@@ -138,7 +139,8 @@
     "tags": []
    },
    "source": [
-    "## Select Columns To Use"
+    "## Select Columns To Use\n",
+    "For clustering only two columns are needed, in this code sample they are selected and referenced in the variable `selected_data`."
    ]
   },
   {
@@ -155,10 +157,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cdfaa321-b705-46de-a9e4-8d4bf98ebdfa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "selected_data = df[column_names]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf044b6a-e359-4535-8602-e518e0bf4a73",
+   "metadata": {},
+   "source": [
+    "The `selected_data` can now be previewed, which shows the two selected columns."
    ]
   },
   {
@@ -178,7 +190,14 @@
     "tags": []
    },
    "source": [
-    "## Find Optimum K Value\n",
+    "## Find Optimum K Value\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2109b383-10ab-453e-9de0-2b0dfa1d0650",
+   "metadata": {},
+   "source": [
     "To find the optimum number for k we use an elbow plot. The \"elbow\" of the graph will indicate the k value, we can also go further along increasing the number of clusters as long as the intertia value is high enough."
    ]
   },
@@ -228,9 +247,19 @@
   {
    "cell_type": "markdown",
    "id": "4cbeb695-d3db-4efe-81dc-a2a0eda7fd2c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Calculate KMeans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afce01bf-a8eb-49ee-ab77-81eb3ba59ac9",
+   "metadata": {},
+   "source": [
+    "Once the optimum k value has been found, the selected data can be clustered using kmeans. Here I selected the min k value to be two which is the optmum shown by the elbow plot, and the max k value will be three the highest k value before the inertia value is too low."
    ]
   },
   {
@@ -258,6 +287,14 @@
    "metadata": {},
    "source": [
     "## Get Cluster Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13a2f750-2c1f-4152-853c-24358c17f0fa",
+   "metadata": {},
+   "source": [
+    "The dataset with the cluster columns added can now be previewed again."
    ]
   },
   {
@@ -343,7 +380,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.2"
-  }
+  },
+  "toc-showcode": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
