add data preview & add headers

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "314af45e-f2bd-4e42-acbb-cedbae9f53f4",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "775da37a-c47c-4624-8199-086ef8364629",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4945169c-71bc-49c3-ae85-cc2452c35a37",
    "metadata": {
     "tags": []
@@ -177,10 +197,47 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a52928d9-fb33-43af-ae4d-35bf583db024",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "selected_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5499efa3-57f5-4bf7-a3b6-4266f91c1bde",
+   "metadata": {},
+   "source": [
+    "## Preview Data\n",
+    "Now the data is loaded it can be previewed on a scatter chart without any clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "358adadc-5513-4b48-ad92-f26cd5e3ee4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_data(data, x, y, xl, yl, title):\n",
+    "    plt.scatter(x=x, y=y, data=data)\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(xl)\n",
+    "    plt.ylabel(yl)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f46d41-f32a-4111-9559-d605e7705593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = column_names\n",
+    "plot_data(df, x, y, \"Sepal Length\", \"Petal Length\", \"Selected Data\")"
    ]
   },
   {
@@ -205,7 +262,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4caacedd-39ad-4d89-a740-55dcdaaaeabb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def show_elbow_plot(data, max_k):\n",
@@ -230,7 +289,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bacd13a4-8b41-4d05-a433-32ab0a077756",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "show_elbow_plot(selected_data, 10)"
@@ -353,13 +414,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "947cf875-2ee0-4192-8e31-aac180d4dc95",
+   "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec7f5c69-94e0-489a-a8e5-486d3e95c2ef",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b40e4f0d-2376-4b66-97c8-775c9bdf90ab",
    "metadata": {},
    "source": [
-    "## References\n",
+    "# References\n",
     "- <https://archive.ics.uci.edu/ml/datasets/Iris>\n",
     "- <https://towardsdatascience.com/how-to-use-unsupervised-learning-to-cluster-well-log-data-using-python-a552713748b5> - MIT\n",
     "- <https://docs.python.org/3/library/urllib.request.html#urllib.request.urlopen>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "057decb8-ff91-49bb-b59e-564abd1155ad",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Appendices\n",
+    "## Source Code\n",
+    "- <https://github.com/enchanted-code/python-kmeans-clustering>"
    ]
   }
  ],
