add more clusters for illustration

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -281,6 +281,7 @@
     "    plt.plot(means, inertias, 'o-')\n",
     "    plt.xlabel(\"Number of Clusters\")\n",
     "    plt.ylabel(\"Inertia\")\n",
+    "    plt.title(\"Elbow Plot Of Possible K Values\")\n",
     "    plt.grid(True)\n",
     "    plt.show()"
    ]
@@ -320,7 +321,9 @@
    "id": "afce01bf-a8eb-49ee-ab77-81eb3ba59ac9",
    "metadata": {},
    "source": [
-    "Once the optimum k value has been found, the selected data can be clustered using kmeans. Here I selected the min k value to be two which is the optmum shown by the elbow plot, and the max k value will be three the highest k value before the inertia value is too low."
+    "Once the optimum k value has been found, the selected data can be clustered using kmeans.\n",
+    "\n",
+    "In this section of code I have selected the min k value to be one and the max k value to be four, this so that I can illustrate optimal and non-optimal clusters with different inertia values."
    ]
   },
   {
@@ -332,8 +335,8 @@
    },
    "outputs": [],
    "source": [
-    "k_min = 2\n",
-    "k_max = 3\n",
+    "k_min = 1\n",
+    "k_max = 4\n",
     "cluster_columns = []\n",
     "\n",
     "for k in range(k_min, k_max + 1):\n",
@@ -365,7 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[column_names]"
+    "df[column_names + cluster_columns]"
    ]
   },
   {
@@ -375,7 +378,8 @@
     "tags": []
    },
    "source": [
-    "## Plot Clusters"
+    "## Plot Clusters\n",
+    "To plot the clusters using matplotlib, I have created a function that will draw one cluster with given data, then through the use of a for loop multiple clusters can be created and grouped using subplots."
    ]
   },
   {
@@ -404,9 +408,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12,8))\n",
+    "plt.figure(figsize=(14,12))\n",
+    "rows = len(cluster_columns) // 2\n",
     "for i, k_col in enumerate(cluster_columns, 1):\n",
-    "    plt.subplot(1, 2, i)\n",
+    "    plt.subplot(rows, 2, i)\n",
     "    x, y = column_names\n",
     "    plot_cluster(df, kmeans, x, y, k_col, \"Sepal Length\", \"Petal Length\", k_col)\n",
     "plt.show()"
