start writing intro

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -7,7 +7,20 @@
     "tags": []
    },
    "source": [
-    "# Introduction"
+    "# Introduction\n",
+    "I have chosen to use the Iris flower dataset to illustrate clustering as it contains several attributes that are given directly as numbers in centimetres, and was created by RA Fisher and Dr E. Anderson 1936.\n",
+    "\n",
+    "The dataset contains only three different Iris species (Iris setosa, Iris virginica and Iris versicolor) however they are visually similar and hard to distinguish apart. The Iris family has very striking features in that the sepal color matches the petal colour and becomes almost a false petal. Fisher used these measurements of the petals and sepals to make a multivariate dataset these figures are often used for machine learning demos.\n",
+    "\n",
+    "There are several methods of clustering data together, which an \"unsupervised learning task\" that groups data into \"subgroups or clusters based on similarity/dissimilarity\" (Kolhe SR. et al, 2010). Some of the methods we could use are: K-Means, K-Medoids, PAM and CLARA. These are all partition based algorithms (Gupta T. et al, 2018). Clustering allows for large amounts of data to be processed into a simpler result that can be later processed by machine learning or seen visually by the user.\n",
+    "\n",
+    "I will be using the K-Means clustering method which uses centroids as the mean point of a cluster, the data surrounding the centroids are grouped to the closet centroid by calculating the Euclidean distance between the two shortest points.\n",
+    "\n",
+    "<!-- TODO: KMeans detailed description\n",
+    "(Soni K.G and Patel A, 2017) -->\n",
+    "\n",
+    "<!-- TODO: Elbow Plot description\n",
+    "(Yuan C and Yang H, 2019) -->"
    ]
   },
   {
@@ -17,7 +30,8 @@
     "tags": []
    },
    "source": [
-    "# Method"
+    "# Method\n",
+    "This section will show how I processed the data and clustered it using KMeans in Python."
    ]
   },
   {
@@ -33,7 +47,7 @@
     "- urlib.request is being used to download the data set\n",
     "- matplotlib is imported to allow for plotting the data onto a graph\n",
     "- pandas is being imported to allow for datasets to be imported and manipulated in-memory\n",
-    "- sklean is used to perform kmeans clustering"
+    "- sklearn is used to perform kmeans clustering"
    ]
   },
   {
@@ -441,6 +455,13 @@
    "metadata": {},
    "source": [
     "# References\n",
+    "- Fisher, R.A., 1936. The use of multiple measurements in taxonomic problems. Annals of eugenics, 7(2), pp.179-188.\n",
+    "- Kolhe, S.R. and Ranjana, S.Z., 2010. Clustering Iris Data using Supervised and Unsupervised Learning. International Journal of Computer Science and Application, (2010), pp.0974-0767.\n",
+    "- Gupta, T. and Panda, S.P., 2018. A comparison of k-means clustering algorithm and clara clustering algorithm on iris dataset. International Journal of Engineering & Technology, 7(4), pp.4766-4768.\n",
+    "- Soni, K.G. and Patel, A., 2017. Comparative Analysis of K-means and K-medoids Algorithm on IRIS Data. International Journal of Computational Intelligence Research, 13(5), pp.899-906.\n",
+    "- Yuan, C. and Yang, H., 2019. Research on K-value selection method of K-means clustering algorithm. J, 2(2), pp.226-235.\n",
+    "\n",
+    "\n",
     "- <https://archive.ics.uci.edu/ml/datasets/Iris>\n",
     "- <https://towardsdatascience.com/how-to-use-unsupervised-learning-to-cluster-well-log-data-using-python-a552713748b5> - MIT\n",
     "- <https://docs.python.org/3/library/urllib.request.html#urllib.request.urlopen>"
@@ -455,7 +476,7 @@
    "source": [
     "# Appendices\n",
     "## Source Code\n",
-    "- <https://github.com/enchanted-code/python-kmeans-clustering>"
+    "- <https://github.com/enchanted-code/python-kmeans-clustering>\n"
    ]
   }
  ],
