add more description & fix references formatting

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -16,11 +16,14 @@
     "\n",
     "I will be using the K-Means clustering method which uses centroids as the mean point of a cluster, the data surrounding the centroids are grouped to the closet centroid by calculating the Euclidean distance between the two shortest points.\n",
     "\n",
-    "<!-- TODO: KMeans detailed description\n",
-    "(Soni K.G and Patel A, 2017) -->\n",
+    "The K-Means clustering algorithms works by first defining the number of centroids to use needs to be defined (the K value), this will also control how many clusters will be created. After K has been defined randomly picked points matching the K value will be selected out of the dataset, these will be the centroids. Once they have been defined the Euclidean distance is used on all possible paths finding the shortest path for each piece of data; which will group the data related to the closet centroid forming clusters, however the centroids are not yet positioned as the average of the data. Therefore this method will then be repeated for all centroids until either two conditions are met:\n",
     "\n",
-    "<!-- TODO: Elbow Plot description\n",
-    "(Yuan C and Yang H, 2019) -->"
+    "1. The centroids no longer move, indicating the data has been clustered correctly\n",
+    "2. The max number of iterations allowed has been reached\n",
+    "\n",
+    "(Soni K.G and Patel A, 2017)\n",
+    "\n",
+    "To select the K value for the K-Means algorithm I will be using the Elbow Method, there are others that can be used such as \"Gap Statistic, Silhouette Coefficient, and Canopy\" (Yuan C and Yang H, 2019). The Elbow Method works by calculating the squared distances from each point to the centroid, giving us an inertia/distortion value. The optimum K value is found by looking at the point of inflection."
    ]
   },
   {
@@ -31,7 +34,7 @@
    },
    "source": [
     "# Method\n",
-    "This section will show how I processed the data and clustered it using KMeans in Python."
+    "This section will show how I processed the data, used the elbow method and clustered it using KMeans in Python."
    ]
   },
   {
@@ -81,7 +84,9 @@
    "metadata": {},
    "source": [
     "### Download Data\n",
-    "This section of code allows for the dataset to be downloaded from source into the current working directory. It also strips any leading or trailing white space characters."
+    "This section of code allows for the dataset to be downloaded from source into the current working directory. The dataset will be downloaded from the \n",
+    "\n",
+    "When downloading the dataset a few extra white space characters are added so this code removes any by using the `strip()` function."
    ]
   },
   {
@@ -106,7 +111,7 @@
    "metadata": {},
    "source": [
     "### Process Data\n",
-    "To use the downloaded dataset, it needs to be processed to be ready. This code will add a header and write to the processed file path."
+    "To use the downloaded dataset, it needs to be processed to be ready. It is missing the attribute headers so this code will add a header and write to the processed file path, so that it can be later loaded in as a csv file."
    ]
   },
   {
@@ -134,7 +139,7 @@
    },
    "source": [
     "### Load Data From CSV Into DataFrame\n",
-    "Once the dataset has been processed into a valid csv file, it can be loaded into a pandas DataFrame."
+    "Once the dataset has been processed into a valid csv file, it can be loaded into a pandas DataFrame. This will allow for easier manipulation later."
    ]
   },
   {
@@ -225,7 +230,7 @@
    "metadata": {},
    "source": [
     "## Preview Data\n",
-    "Now the data is loaded it can be previewed on a scatter chart without any clusters."
+    "Now the data is loaded it can be previewed without any clusters. This code will plot the selected columns onto a matplotlib scatter chart."
    ]
   },
   {
@@ -269,7 +274,9 @@
    "id": "2109b383-10ab-453e-9de0-2b0dfa1d0650",
    "metadata": {},
    "source": [
-    "To find the optimum number for k we use an elbow plot. The \"elbow\" of the graph will indicate the k value, we can also go further along increasing the number of clusters as long as the intertia value is high enough."
+    "To find the optimum number for k we use an elbow plot. The \"elbow\" of the graph will indicate the k value, we can also go further along increasing the number of clusters as long as the inertia value is high enough, this however is highly dependant on the dataset that is being used.\n",
+    "\n",
+    "This code block will calculate KMeans until the `max_k` value is reached, then they will displayed on another matplotlib plot."
    ]
   },
   {
@@ -337,7 +344,7 @@
    "source": [
     "Once the optimum k value has been found, the selected data can be clustered using kmeans.\n",
     "\n",
-    "In this section of code I have selected the min k value to be one and the max k value to be four, this so that I can illustrate optimal and non-optimal clusters with different inertia values."
+    "In this section of code I have selected the min k value to be one and the max k value to be four, this is so that I can illustrate optimal and non-optimal clusters with different inertia values."
    ]
   },
   {
@@ -372,7 +379,7 @@
    "id": "13a2f750-2c1f-4152-853c-24358c17f0fa",
    "metadata": {},
    "source": [
-    "The dataset with the cluster columns added can now be previewed again."
+    "The dataset with the selected columns and clusters can now be previewed."
    ]
   },
   {
@@ -393,7 +400,9 @@
    },
    "source": [
     "## Plot Clusters\n",
-    "To plot the clusters using matplotlib, I have created a function that will draw one cluster with given data, then through the use of a for loop multiple clusters can be created and grouped using subplots."
+    "To plot the clusters using matplotlib, I have created a function that will draw one cluster with given data, then through the use of a for loop multiple clusters can be created and grouped using subplots.\n",
+    "\n",
+    "The `enumerate()` function will allow for us to iterate through the cluster columns and get back a step number, which is used to place the plot in it's correct place on screen."
    ]
   },
   {
@@ -460,11 +469,9 @@
     "- Gupta, T. and Panda, S.P., 2018. A comparison of k-means clustering algorithm and clara clustering algorithm on iris dataset. International Journal of Engineering & Technology, 7(4), pp.4766-4768.\n",
     "- Soni, K.G. and Patel, A., 2017. Comparative Analysis of K-means and K-medoids Algorithm on IRIS Data. International Journal of Computational Intelligence Research, 13(5), pp.899-906.\n",
     "- Yuan, C. and Yang, H., 2019. Research on K-value selection method of K-means clustering algorithm. J, 2(2), pp.226-235.\n",
-    "\n",
-    "\n",
-    "- <https://archive.ics.uci.edu/ml/datasets/Iris>\n",
-    "- <https://towardsdatascience.com/how-to-use-unsupervised-learning-to-cluster-well-log-data-using-python-a552713748b5> - MIT\n",
-    "- <https://docs.python.org/3/library/urllib.request.html#urllib.request.urlopen>"
+    "- Dua, D. and Graff, C. (2019). UCI Machine Learning Repository <https://archive.ics.uci.edu/ml/datasets/Iris>. Irvine, CA: University of California, School of Information and Computer Science.\n",
+    "- Andy McDonald, 2021. How to Use Unsupervised Clustering on Well Log Data with Python <https://towardsdatascience.com/how-to-use-unsupervised-learning-to-cluster-well-log-data-using-python-a552713748b5> (code licensed under MIT).\n",
+    "- Python Software Foundation, no-date. Python 3 documentation. <https://docs.python.org/3/>."
    ]
   },
   {
