add title & improve intro

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c78a7069",
+   "metadata": {},
+   "source": [
+    "# KMeans Clustering Iris Data\n",
+    "\n",
+    "By Leo Spratt, 2022"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "314af45e-f2bd-4e42-acbb-cedbae9f53f4",
    "metadata": {
     "tags": []
@@ -10,15 +20,15 @@
     "# Introduction\n",
     "I have chosen to use the Iris flower dataset to illustrate clustering as it contains several attributes that are given directly as numbers in centimetres, and was created by RA Fisher and Dr E. Anderson 1936.\n",
     "\n",
-    "The dataset contains only three different Iris species (Iris setosa, Iris virginica and Iris versicolor) however they are visually similar and hard to distinguish apart. The Iris family has very striking features in that the sepal color matches the petal colour and becomes almost a false petal. Fisher used these measurements of the petals and sepals to make a multivariate dataset these figures are often used for machine learning demos.\n",
+    "The dataset contains only three different Iris species (Iris setosa, Iris virginica and Iris versicolor) however they are visually similar and hard to distinguish apart. The Iris family has very striking features in that the sepal color matches the petal colour and becomes almost a false petal. Fisher used these measurements of the petals and sepals to make a multivariate dataset these figures are often used for machine learning demos as the data is linearly separable and has no empty columns.\n",
     "\n",
-    "There are several methods of clustering data together, which an \"unsupervised learning task\" that groups data into \"subgroups or clusters based on similarity/dissimilarity\" (Kolhe SR. et al, 2010). Some of the methods we could use are: K-Means, K-Medoids, PAM and CLARA. These are all partition based algorithms (Gupta T. et al, 2018). Clustering allows for large amounts of data to be processed into a simpler result that can be later processed by machine learning or seen visually by the user.\n",
+    "There are several methods of clustering data together, which is an \"unsupervised learning task\" that groups data into \"subgroups or clusters based on similarity/dissimilarity\" (Kolhe SR. et al, 2010). Some of the methods we could use are: K-Means, K-Medoids, PAM and CLARA. These are all partition based algorithms (Gupta T. et al, 2018). Clustering allows for large amounts of data to be processed into a simpler result that can be later processed by machine learning or seen visually by the user.\n",
     "\n",
     "I will be using the K-Means clustering method which uses centroids as the mean point of a cluster, the data surrounding the centroids are grouped to the closet centroid by calculating the Euclidean distance between the two shortest points, the formula for this is:\n",
     "\n",
     "d = (($p_{1}$ - $q_{1}$)$^{2}$ + ($p_{2}$ - $q_{2}$)$^{2}$)$^{1/2}$\n",
     "\n",
-    "The K-Means clustering algorithms works by first defining the number of centroids to use needs to be defined (the K value), this will also control how many clusters will be created. After K has been defined randomly picked points matching the K value will be selected out of the dataset, these will be the centroids. Once they have been defined the Euclidean distance is used on all possible paths finding the shortest path for each piece of data; which will group the data related to the closet centroid forming clusters, however the centroids are not yet positioned as the average of the data. Therefore this method will then be repeated for all centroids until either two conditions are met:\n",
+    "The K-Means clustering algorithms works by first defining the number of centroids to use (the K value), this will also control how many clusters will be created. After K has been defined randomly picked points matching the K value will be selected out of the dataset, these will be the centroids. Once they have been defined the Euclidean distance is used on all possible paths finding the shortest path for each piece of data; which will group the data related to the closet centroid forming clusters, however the centroids are not yet positioned as the average of the data. Therefore this method will then be repeated for all centroids until either two conditions are met:\n",
     "\n",
     "1. The centroids no longer move, indicating the data has been clustered correctly\n",
     "2. The max number of iterations allowed has been reached\n",
