add results & conclusion

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -457,7 +457,16 @@
    "id": "947cf875-2ee0-4192-8e31-aac180d4dc95",
    "metadata": {},
    "source": [
-    "# Results"
+    "# Results\n",
+    "After generating the four clusters with K values of one, two, three and four we can see depending on the K value we get varying results.\n",
+    "\n",
+    "We can see that having only one cluster does not produce the desired results due to no clustering happening.\n",
+    "\n",
+    "Looking at the K value of two we can see that the elbow method has produced the correct outcome to find the optimum value for K, as the two clusters are clearly linearly separated as the two clusters are quite far apart.\n",
+    "\n",
+    "The plot with the K value of three, shows that the three species of iris's have been shown which is why this can also be a optimum K value.\n",
+    "\n",
+    "The last plot shows what a undesired K value (that being four) would look like when clustered, this produces too many clusters for data that are not distinct enough. If the K value was increased any higher it would just produce more clusters that were smaller but not actually different data, which is why the elbow method finds these to be undesired."
    ]
   },
   {
@@ -467,7 +476,18 @@
     "tags": []
    },
    "source": [
-    "# Conclusion"
+    "# Conclusion\n",
+    "In conclusion we can see that the iris dataset was clustered so we could see the three species of plants.\n",
+    "\n",
+    "There are some issues with using KMeans that may happen when clustering other datasets that are not so distinct and well separated. The first issue is that the value K must be known before any clustering can be done. The second issue is overlapping data cannot be solved accurately. The third issue is due to Euclidean distance being used and that it can give uneven weights. The fourth issue is KMeans will only work for non-linear data The fifth issue is that the cluster centers are chosen randomly which can lead to the result being invalid (Gupta T. et al, 2018).\n",
+    "\n",
+    "We can see from our results some of this issues. We can see that when using the optimum value for K (that being two), we will get some data that is associated with the wrong cluster. We can also see the problem with not knowing the K value as the four plots generated with different K values show that the K value is highly important for producing a valid result.\n",
+    "\n",
+    "The reasons why we use K-Means despite having these issues is that it has less complex algorithms, it works on numeric values and it gives good results when data is distinct and linearly separable (ibid.).\n",
+    "\n",
+    "This can be seen in the plot with three clusters as each species of iris can be seen separated in each cluster.\n",
+    "\n",
+    "We could improve our clusters by using different clustering algorithms such as: K-Medoids, PAM and CLARA which may give better results, for example K-Medoids is similar to K-Means however after each iteration a new centroid is created from a centrally located point of data compared to just an average found in K-Means (ibid.)."
    ]
   },
   {
