improve conclusion & intro

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -18,17 +18,23 @@
    },
    "source": [
     "# Introduction\n",
-    "I have chosen to use the Iris flower dataset to illustrate clustering as it contains several attributes that are given directly as numbers in centimetres, and was created by RA Fisher and Dr E. Anderson 1936.\n",
+    "I have chosen to use the Iris flower dataset to illustrate K-Means clustering as it contains several attributes that are given directly as numbers in centimetres, which was created by RA Fisher and Dr E. Anderson 1936.\n",
     "\n",
-    "The dataset contains only three different Iris species (Iris setosa, Iris virginica and Iris versicolor) however they are visually similar and hard to distinguish apart. The Iris family has very striking features in that the sepal color matches the petal colour and becomes almost a false petal. Fisher used these measurements of the petals and sepals to make a multivariate dataset these figures are often used for machine learning demos as the data is linearly separable and has no empty columns.\n",
+    "From my own observations in my garden I have seen that Irises have a very distinct petal and sepal arrangement which would surely make them easy to measure accurately. When fully open the irises petal and sepal are the same color.\n",
+    "\n",
+    "There are approximately \"300 species\" of irises (Britannica, 2021), most of which are visually similar and hard to distinguish apart.\n",
+    "\n",
+    "Fisher's dataset took only three different Iris species (Setosa, Virginica and Versicolor). He used measurements of the petals and sepals of these three species to make a multivariate dataset. These figures are often used for machine learning demos and experiments as the data is linearly separable and has no empty columns/rows.\n",
+    "\n",
+    "For example the iris dataset has been used in combination with a wine dataset for a study on the performance of K-Means with a different number of attributes (Bora et al, 2014). Another example is comparing different distance metrics to estimate cluster values (Chakraborty et al, 2020).\n",
     "\n",
     "There are several methods of clustering data together, which is an \"unsupervised learning task\" that groups data into \"subgroups or clusters based on similarity/dissimilarity\" (Kolhe SR. et al, 2010). Some of the methods we could use are: K-Means, K-Medoids, PAM and CLARA. These are all partition based algorithms (Gupta T. et al, 2018). Clustering allows for large amounts of data to be processed into a simpler result that can be later processed by machine learning or seen visually by the user.\n",
     "\n",
-    "I will be using the K-Means clustering method which uses centroids as the mean point of a cluster, the data surrounding the centroids are grouped to the closet centroid by calculating the Euclidean distance between the two shortest points, the formula for this is:\n",
+    "I will be using the K-Means clustering method which uses centroids as the mean point of a cluster, the data surrounding the centroids are grouped to the closest centroid by calculating the Euclidean distance between the two shortest points, the formula for this is:\n",
     "\n",
     "d = (($p_{1}$ - $q_{1}$)$^{2}$ + ($p_{2}$ - $q_{2}$)$^{2}$)$^{1/2}$\n",
     "\n",
-    "The K-Means clustering algorithms works by first defining the number of centroids to use (the K value), this will also control how many clusters will be created. After K has been defined randomly picked points matching the K value will be selected out of the dataset, these will be the centroids. Once they have been defined the Euclidean distance is used on all possible paths finding the shortest path for each piece of data; which will group the data related to the closet centroid forming clusters, however the centroids are not yet positioned as the average of the data. Therefore this method will then be repeated for all centroids until either two conditions are met:\n",
+    "The K-Means clustering algorithms works by first defining the number of centroids to use (the K value), this will also control how many clusters will be created. After K has been defined; randomly picked points matching the K value will be selected out of the dataset, these will be the centroids. Once they have been defined the Euclidean distance is used on all possible paths finding the shortest path for each piece of data. This will group the data related to the closest centroid forming clusters, however the centroids are not yet positioned as the average of the data. Therefore this method will then be repeated for all centroids until either two conditions are met:\n",
     "\n",
     "1. The centroids no longer move, indicating the data has been clustered correctly\n",
     "2. The max number of iterations allowed has been reached\n",
@@ -479,9 +485,9 @@
     "# Conclusion\n",
     "In conclusion we can see that the iris dataset was clustered so we could see the three species of plants.\n",
     "\n",
-    "There are some issues with using KMeans that may happen when clustering other datasets that are not so distinct and well separated. The first issue is that the value K must be known before any clustering can be done. The second issue is overlapping data cannot be solved accurately. The third issue is due to Euclidean distance being used and that it can give uneven weights. The fourth issue is KMeans will only work for non-linear data The fifth issue is that the cluster centers are chosen randomly which can lead to the result being invalid (Gupta T. et al, 2018).\n",
+    "There are some issues with using KMeans that may happen when clustering other datasets that are not so distinct and well separated. The first issue is that the value K must be known before any clustering can be done. The second issue is overlapping data cannot be solved accurately. The third issue is due to Euclidean distance being used and that it can give uneven weights, it has been suggested that using city block distance or correlation distance may be more accurate (Chakraborty et al, 2020). The fourth issue is KMeans will only work for non-linear data The fifth issue is that the cluster centers are chosen randomly which can lead to the result being invalid (Gupta T. et al, 2018).\n",
     "\n",
-    "We can see from our results some of this issues. We can see that when using the optimum value for K (that being two), we will get some data that is associated with the wrong cluster. We can also see the problem with not knowing the K value as the four plots generated with different K values show that the K value is highly important for producing a valid result.\n",
+    "We can see from our results some of these issues. We can see that even when using the optimum value for K found by the Elbow Method (that being two), we will get some data that is associated with the wrong cluster. We can also see the problem with not knowing the K value as the four plots generated with different K values show that the K value is highly important for producing a valid result.\n",
     "\n",
     "The reasons why we use K-Means despite having these issues is that it has less complex algorithms, it works on numeric values and it gives good results when data is distinct and linearly separable (ibid.).\n",
     "\n",
@@ -496,7 +502,10 @@
    "metadata": {},
    "source": [
     "# References\n",
+    "- Britannica, T. Editors of Encyclopaedia (2021, September 22). iris. Encyclopedia Britannica. https://www.britannica.com/plant/Iris-plant-genus\n",
     "- Fisher, R.A., 1936. The use of multiple measurements in taxonomic problems. Annals of eugenics, 7(2), pp.179-188.\n",
+    "- Bora, M., Jyoti, D., Gupta, D. and Kumar, A., 2014. Effect of different distance measures on the performance of K-means algorithm: an experimental study in Matlab. arXiv preprint arXiv:1405.7471.\n",
+    "- Chakraborty, A., Faujdar, N., Punhani, A. and Saraswat, S., 2020, January. Comparative study of k-means clustering using iris data set for various distances. In 2020 10th International Conference on Cloud Computing, Data Science & Engineering (Confluence) (pp. 332-335). IEEE.\n",
     "- Kolhe, S.R. and Ranjana, S.Z., 2010. Clustering Iris Data using Supervised and Unsupervised Learning. International Journal of Computer Science and Application, (2010), pp.0974-0767.\n",
     "- Gupta, T. and Panda, S.P., 2018. A comparison of k-means clustering algorithm and clara clustering algorithm on iris dataset. International Journal of Engineering & Technology, 7(4), pp.4766-4768.\n",
     "- Soni, K.G. and Patel, A., 2017. Comparative Analysis of K-means and K-medoids Algorithm on IRIS Data. International Journal of Computational Intelligence Research, 13(5), pp.899-906.\n",
